Fixed header spacing

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,13 @@
 .spacer {
-  flex: 1 1 auto;
+  flex: 1 1 0;
+}
+
+.heading {
+  flex: 1 1 0;
+  text-align: center;
+}
+
+.button {
+  flex: 1 1 0;
+  text-align: right;
 }
